trunk/Archive2/b5/3e7413f82de303/output
main.cpp: In function 'int main()':
main.cpp:15:5: error: static assertion failed: oops
     static_assert(HasToString<int>::value, "oops");
     ^
